# searchCLI

./: .travis.yml  README.md  main.py  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
data/: tinyDb.json
model/: Search.py  TinyDbDAO.py
search/: main.py
search/data/: tinyDb.json
search/model/: Search.py  SearchTinyDb.py  search.py
search/view/: searchMenu.py  searchView.py
tests/: testUtils.py  test_TinyDbDAO.py  test_search.py
tests/TestResources/: MockDb.py
view/: searchMenu.py
