[metadata]

author = Russell Jarvis
author_email = russelljarvis@protonmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
packages = find:
python_requires = >=3.7

install_requires =
    attrs==20.3.0
    click==7.1.2
    iniconfig==1.1.1
    packaging==20.9
    pluggy==0.13.1
    py==1.10.0
    pyparsing==2.4.7
    pytest==6.2.2
    tinydb==4.4.0
    toml==0.10.2
